--- a/style.css
+++ b/style.css
@@ -33,20 +33,13 @@ kjb
   background: #77ffc0; 
 }
 
-.pre{
-  width: 80px; height: 80px;
-  background-image: url("https://ilustracode.com.br/assets/images/load.png");
-  background-position: center;
-  background-size: contain;
-  animation: load 2s infinite;
-}
-
 body * {
   box-sizing: border-box;
 }
 
 .div-main{
   /* "vh" e "vw" usa o tamanho da tela como parâmetro */
+  padding-top: 20px;
   width: 100vw; 
   height: 100vh;
   background: #201b2c;
@@ -63,7 +56,6 @@ body * {
   justify-content: center; /* "justify-content" ajusta a posição dos itens no eixo "X" */
   align-items: center; /* "align-itens" ajusta a posição dos itens no eixo "Y" */
   flex-direction: column; /* defiine a direção da organização flex, nesse caso eu quero que a imagem ainda fique no centro */
-
 }
 
 .div-left > h1 {
@@ -135,10 +127,43 @@ body * {
   color: #f0ffff94;
 }
 
+.custom-checkbox{
+  display: flex;
+  flex-direction: row;
+  color: #f0ffffde;
+  border-top: 20px solid transparent;
+}
+
+.custom-checkbox input{
+  display: none;
+}
+
+.custom-checkbox input + label::before{
+  content: "";
+  width: 18px;
+  height: 18px;
+  background-color: white;
+  border-radius: 1910px;
+  border: 1px solid gray;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 8px;
+  margin-bottom: 3px;
+}
+
+.custom-checkbox input:checked + label:before {
+  background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 10 10'%3E%3Cg class='nc-icon-wrapper' stroke-width='1' fill='%23555555'%3E%3Cpath fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='10' data-cap='butt' d='M2.83 4.72l1.58 1.58 2.83-2.83'/%3E%3C/g%3E%3C/svg%3E");
+  background-color: #00ff88;
+  background-position: center;
+  border: none;
+  padding: 1px;
+}
+
+
 .btn-login{
   width: 100%;
   padding: 16px 0px;
-  margin: 25px;
+  margin: 25px 3px;
   border: none;
   border-radius: 8px;
   font-weight: 800;
@@ -154,12 +179,14 @@ body * {
    background-color: #77FFC0;
 }
 
-/* .usuario:focus{
-border: solid 2px#00ff88;
-} */
-
 .criar, .ncconectar{
 color:#77FFC0
+}
+
+.footer{
+  background-color: #201b2c;
+  width: 100vw;
+  height: 50px;
 }
 
 /* media só será ativado quando a tela possuir até 950px */
